# tvm-assistant

./: .env.example  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  sqlx-data.json  style.css
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
docs/: _config.yml  commands-reference.md  formatting.md  index.md  quickstart.md  self-hosting.md
docs/outdated/: index.md  v0.1.0.md  v0.2.0.md
migrations/: 20200724141551_config.sql  20200724141557_prefixes.sql  20200724141600_logging.sql  20200725144706_tvm_assistant.sql  20210114200751_notify.sql
src/: events.rs  main.rs
src/commands/: help.rs  host.rs  logging.rs  meta.rs  mod.rs  owner.rs  setup.rs  user.rs
src/utils/: checks.rs  constants.rs  converters.rs  database.rs  embed.rs  formatting.rs  menu.rs  message.rs  mod.rs  predicates.rs  tos.rs
