[package]
name = "tvm-assistant"
version = "0.2.0"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
kankyo = "0.3.0"
log = "0.4.11"
serde_json = "1.0.56"
regex = "1.3.9"
lazy_static = "1.4.0"
indexmap = "1.5.0"
futures = "0.3.5"
chrono = "0.4.13"
comrak = "0.8.0"
ammonia = "3.1.0"

[dependencies.tokio]
version = "0.2.21"
features = ["full"]

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity"
branch = "await"
# We need `collector` in addition to the default features.
features = ["collector"]

[dependencies.sqlx]
version = "0.3.5"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "json"]

[dependencies.rand]
version = "0.7.3"
features = ["getrandom", "std"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.6"
features = ["json"]
