[package]
name = "tvm-assistant"
version = "0.3.1"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[dependencies]
serde_json = "1.0.62"
regex = "1.4.3"
lazy_static = "1.4.0"
indexmap = "1.6.1"
futures = "0.3.12"
chrono = "0.4.19"
comrak = "0.9.0"
ammonia = "3.1.0"
serenity_utils = "0.6.1"
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"

openssl = { version = "*", optional = true }

[features]
vendored-openssl = ["openssl/vendored"]

[dependencies.tokio]
version = "1.2.0"
features = ["full"]

[dependencies.serenity]
version = "0.10.2"
# We need `collector` in addition to the default features.
features = ["collector"]

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "offline", "json", "chrono", "migrate"]

[dependencies.rand]
version = "0.8.3"
features = ["getrandom", "std"]

[dependencies.serde]
version = "1.0.123"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.0"
features = ["json"]
